2005-09-26  Eric Seidel  <eseidel@apple.com>

        Reviewed by hyatt.

        Landing the W3C XHTML DOM test suites.
        This also includes changes necessary to make these
        tests run (and many pass) on our system.
	http://bugzilla.opendarwin.org/show_bug.cgi?id=4907

        * khtml/xml/xml_tokenizer.cpp: removed XMLNamespace*, added entity support.
        * layout-tests/fast/dom/set-innerHTML.xhtml: improved error reporting.

        Test cases added:
        * layout-tests/dom/xhtml/level1/: Added.
        * layout-tests/dom/xhtml/level1/core/documentgetdoctypenodtd-expected.txt: Added.
        * layout-tests/dom/xhtml/level1/core/documentgetdoctypenodtd.js: Added.
        * layout-tests/dom/xhtml/level1/core/documentgetdoctypenodtd.xhtml: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreateentref-expected.txt: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreateentref.js: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreateentref.xhtml: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreateentref1-expected.txt: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreateentref1.js: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreateentref1.xhtml: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreatepi-expected.txt: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreatepi.js: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreatepi.xhtml: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreatepi1-expected.txt: Added.
        * layout-tests/dom/xhtml/level1/core/documentinvalidcharacterexceptioncreatepi1.js: Added.