@@ -29,7 +29,7 @@
  Do NOT depend on these SPIs or files as they will soon be gone.
 */
 
-#import <WebCore+SVG/DrawCanvasItem.h>
+#import <WebCore/DrawCanvasItem.h>
 
 class KCanvasItem;
 
